Replace Arrays.asList(one-arg) with List.of(one-arg)